--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
 	"license": "ISC",
 	"dependencies": {
 		"@popperjs/core": "^2.11.0",
+		"firebase": "^9.6.1",
 		"react": "^17.0.2",
+		"react-datepicker": "^4.5.0",
 		"react-dom": "^17.0.2",
 		"react-popper": "^2.2.5",
 		"react-router-dom": "^6.2.1",
@@ -22,7 +24,9 @@
 	"devDependencies": {
 		"autoprefixer": "^10.4.0",
 		"postcss": "^8.4.5",
-		"tailwindcss": "^3.0.7"
+		"tailwindcss": "^3.0.7",
+		"webpack": "^5.65.0",
+		"webpack-cli": "^4.9.1"
 	},
 	"browserslist": {
 		"production": [
