--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 	},
 	"devDependencies": {
 		"autoprefixer": "^10.4.0",
+		"markdown-notes-tree": "^1.12.0",
 		"postcss": "^8.4.5",
 		"tailwindcss": "^3.0.7",
 		"webpack": "^5.65.0",
