--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@emotion/react": "^11.11.0",
+    "@mantine/carousel": "^6.0.10",
     "@mantine/core": "^6.0.10",
     "@mantine/form": "^6.0.10",
     "@mantine/hooks": "^6.0.10",
@@ -21,6 +22,7 @@
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
     "@types/websocket": "^1.0.5",
+    "embla-carousel-react": "^8.0.0-rc03",
     "firebase": "^9.6.1",
     "react": "^17.0.2",
     "react-datepicker": "^4.5.0",
