--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://thucnhu.github.io/habit-tracker/",
   "name": "habit-tracker",
   "version": "1.0.0",
   "description": "A web app that facilitates you in maintaining and improving habits using spaced-repetition reminder",
@@ -6,7 +7,9 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "keywords": [],
   "author": "Bui Tran Thuc Nhu",
@@ -34,6 +37,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
+    "gh-pages": "^5.0.0",
     "markdown-notes-tree": "^1.12.0",
     "postcss": "^8.4.5",
     "tailwindcss": "^3.0.7",
